# SyntaxSmith

./: CMakeLists.txt  README.md
example/: simpleExamples.cpp
includes/: SSBase.hpp  SSHelper.hpp  SSNoArgs.hpp  SSOneSide.hpp  SyntaxSmith.hpp
